# wayland-webkit-widget

./: Cargo.toml  README.md
src/: app.rs  app_state.rs  cli.rs  constants.rs  http_server.rs  main.rs  utils.rs  widget.rs
src/commands/: create.rs  delete.rs  handler.rs  hide.rs  inspect.rs  kill.rs  list.rs  mod.rs  reload.rs  show.rs  update.rs
src/services/: application.rs
